--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 /Android App/AndroidApplication1/gen/
-/Desktop App/qt/client/build-client-Desktop_Qt_5_1_0_MinGW_32bit-Debug
+/Desktop App/qt/client/build*
