--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Android App/AndroidApplication1/gen/
 /Desktop App/qt/client/build*
 /Desktop App/qt/nplib/build*
+/Desktop App/wpf/ArduinoAdmin/ArduinoAdmin/bin
+/Desktop App/wpf/ArduinoAdmin/ArduinoAdmin/obj
+~*
